# autoresearch

./: program.md  pyproject.toml
autoresearch_futures/: README.md  __init__.py  __main__.py  backtest.py  config.py  ensemble.py  evolve.py  monitor.py  notify.py  prepare.py  pyproject.toml  signals.py
autoresearch_futures/tests/: test_prepare.py
docs/superpowers/plans/: 2026-03-23-futures-autoevolution.md
docs/superpowers/specs/: 2026-03-23-futures-autoevolution-design.md
tests/: __init__.py  test_backtest.py  test_config.py  test_ensemble.py  test_evolve.py  test_notify.py  test_signals.py
